// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handles an import that is later exported 1`] = `
Object {
  "nodes": Array [
    Object {
      "start": 0,
      "type": "import",
    },
    Object {
      "default": true,
      "start": 28,
      "type": "export",
    },
  ],
}
`;

exports[`Handles basic usecase of default export 1`] = `
Object {
  "nodes": Array [
    Object {
      "default": true,
      "start": 0,
      "type": "export",
    },
  ],
}
`;

exports[`Handles const exports 1`] = `
Object {
  "nodes": Array [
    Object {
      "start": 0,
      "type": "export",
    },
  ],
}
`;

exports[`Handles multiline default exports 1`] = `
Object {
  "nodes": Array [
    Object {
      "default": true,
      "start": 0,
      "type": "export",
    },
  ],
}
`;

exports[`Handles multiline exports 1`] = `
Object {
  "nodes": Array [
    Object {
      "start": 0,
      "type": "export",
    },
  ],
}
`;

exports[`Separates import from the default export 1`] = `
Object {
  "nodes": Array [
    Object {
      "start": 0,
      "type": "import",
    },
    Object {
      "default": true,
      "start": 24,
      "type": "export",
    },
  ],
}
`;
